# audiotools

./: CMakeLists.txt  __init__.py  main.cpp  pyproject.toml
.github/workflows/: build_and_publish.yml
audiotools/: utils.pyi
src/: python_bindings.cpp
src/effects/: Normalize.cpp
